First change - re-fixing jni worker.
The 'main' workers.properties is used, and the 'main' server.xml is used ( now
server.xml includes JNI by default, since the module can detect the startup mode
and enable or disable itself ).

Workers.properties should be the only config file you need to change to set
up the workers ( and apache communication with tomcat ).

--- a/src/etc/jk/workers.properties
+++ b/src/etc/jk/workers.properties
@@ -1,9 +1,3 @@
-#
-# $Header: /tmp/cvs-vintage/tomcat/src/etc/jk/workers.properties,v 1.3 2001/03/16 20:50:19 larryi Exp $
-# $Revision: 1.3 $
-# $Date: 2001/03/16 20:50:19 $
-#
-#
 # workers.properties -
 #
 # This file provides jk derived plugins with the needed information to
@@ -36,6 +30,8 @@
 # the plugins use other workers you should modify the worker.list property.
 #
 #
+
+# OPTIONS ( very important for jni mode )
 
 #
 # workers.tomcat_home should point to the location where you
@@ -71,7 +67,10 @@
 #
 # The workers that your plugins should create and work with
 #
+# Add 'inprocess' if you want JNI connector 
 worker.list=ajp12, ajp13
+# , inprocess
+
 
 #
 #------ DEFAULT ajp12 WORKER DEFINITION ------------------------------
@@ -152,58 +151,49 @@ worker.inprocess.type=jni
 #
 # Additional class path components.
 #
-worker.inprocess.class_path=$(workers.tomcat_home)$(ps)classes
+worker.inprocess.class_path=$(workers.tomcat_home)$(ps)lib$(ps)tomcat.jar
+worker.inprocess.class_path=$(workers.tomcat_home)$(ps)lib$(ps)container$(ps)tomcat-modules.jar
 
 #
-# The XML parser provided with Tomcat
-#
-worker.inprocess.class_path=$(workers.tomcat_home)$(ps)lib$(ps)jaxp.jar
-worker.inprocess.class_path=$(workers.tomcat_home)$(ps)lib$(ps)parser.jar
-
-#
-# Tomcat's implementation
-#
-worker.inprocess.class_path=$(workers.tomcat_home)$(ps)lib$(ps)jasper.jar
-worker.inprocess.class_path=$(workers.tomcat_home)$(ps)lib$(ps)servlet.jar
-worker.inprocess.class_path=$(workers.tomcat_home)$(ps)lib$(ps)webserver.jar
-
-#
-# Javac as available from Java2SE
-#
-worker.inprocess.class_path=$(workers.java_home)$(ps)lib$(ps)tools.jar
-
-#
-# Setting the command line for tomcat
+# Setting the command line for tomcat. 
 # Note: The cmd_line string may not contain spaces.
 #
-worker.inprocess.cmd_line=-config
-worker.inprocess.cmd_line=$(workers.tomcat_home)$(ps)conf$(ps)jni_server.xml
-worker.inprocess.cmd_line=-home
-worker.inprocess.cmd_line=$(workers.tomcat_home)
+worker.inprocess.cmd_line=start
+
+# Not needed, but can be customized.
+#worker.inprocess.cmd_line=-config
+#worker.inprocess.cmd_line=$(workers.tomcat_home)$(ps)conf$(ps)server.xml
+#worker.inprocess.cmd_line=-home
+#worker.inprocess.cmd_line=$(workers.tomcat_home)
 
 #
 # The JVM that we are about to use
 #
 # This is for Java2
 #
+# Windows
 worker.inprocess.jvm_lib=$(workers.java_home)$(ps)jre$(ps)bin$(ps)classic$(ps)jvm.dll
+# IBM JDK1.3 
+#worker.inprocess.jvm_lib=$(workers.java_home)$(ps)jre$(ps)bin$(ps)classic$(ps)libjvm.so
+# Unix - Sun VM or blackdown
+#worker.inprocess.jvm_lib=$(workers.java_home)$(ps)jre$(ps)lib$(ps)i386$(ps)classic$(ps)libjvm.so
 
 #
 # And this is for jdk1.1.X
 #
 #worker.inprocess.jvm_lib=$(workers.java_home)$(ps)bin$(ps)javai.dll
-#
+
 
 #
 # Setting the place for the stdout and stderr of tomcat
 #
-worker.inprocess.stdout=$(workers.tomcat_home)$(ps)inprocess.stdout
-worker.inprocess.stderr=$(workers.tomcat_home)$(ps)inprocess.stderr
+worker.inprocess.stdout=$(workers.tomcat_home)$(ps)logs$(ps)inprocess.stdout
+worker.inprocess.stderr=$(workers.tomcat_home)$(ps)logs$(ps)inprocess.stderr
 
 #
 # Setting the tomcat.home Java property
 #
-worker.inprocess.sysprops=tomcat.home=$(workers.tomcat_home)
+#worker.inprocess.sysprops=tomcat.home=$(workers.tomcat_home)
 
 #
 # Java system properties
