added default email settings for ModifyIssue action.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -3,6 +3,10 @@ scarab.email.register.fromAddress=help@scarab.tigris.org
 scarab.email.register.subject=Account Confirmation
 scarab.email.register.template=email/Confirmation.vm
 
+scarab.email.modifyissue.fromName=Scarab System
+scarab.email.modifyissue.fromAddress=help@scarab.tigris.org
+scarab.email.modifyissue.template=email/ModifyIssue.vm
+
 services.PullService.tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
 services.PullService.tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
 services.PullService.tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurityPull
