--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.51 2001/08/21 01:03:19 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.52 2001/08/24 21:29:21 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -518,7 +518,7 @@ services.VelocityService.default.layout.template = /Default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
 #services.VelocityService.input.encoding=UTF-8
-services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,GlobalMacros.vm,ViewIssueMacro.vm,AdvancedQueryMacro.vm 
+services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,macros/GlobalMacros.vm,macros/ViewIssueMacro.vm,macros/AdvancedQueryMacro.vm 
 
 services.VelocityService.resource.loader = file
 services.VelocityService.file.resource.loader.description = Velocity File Resource Loader
