added user service config PR: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -22,6 +22,7 @@ scarab.domain.name=myscarab
 searchindex.class=org.tigris.scarab.util.word.LuceneAdaptor
 searchindex.path=/WEB-INF/index
 
-# The Module Service
+# The Integration Services
 services.ScarabModuleService.classname=org.tigris.scarab.services.module.ModuleServiceImpl
 services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.ScarabModule
+services.UserService.classname=org.tigris.scarab.services.user.TurbineUserService
