Rolling back change.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.53 2001/08/27 23:51:50 dlr Exp $
+# $Id: TurbineResources.properties,v 1.54 2001/08/28 00:39:29 dlr Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -373,7 +373,7 @@ services.DatabaseService.earlyInit = true
 # -------------------------------------------------------------------
 
 services.RunDataService.default.run.data=org.apache.turbine.services.rundata.DefaultTurbineRunData
-services.RunDataService.default.parameter.parser=org.apache.fulcrum.util.parser.DefaultParameterParser
+services.RunDataService.default.parameter.parser=org.apache.turbine.ParameterParser
 services.RunDataService.default.cookie.parser=org.apache.fulcrum.util.parser.DefaultCookieParser
 
 # -------------------------------------------------------------------
