fixed locations of intake commented out dead code

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.54 2001/08/28 00:39:29 dlr Exp $
+# $Id: TurbineResources.properties,v 1.55 2001/08/28 01:00:33 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -287,7 +287,7 @@ services.TemplateService.classname=org.apache.fulcrum.template.TurbineTemplateSe
 services.RunDataService.classname=org.apache.turbine.services.rundata.TurbineRunDataService
 services.LocalizationService.classname=org.apache.turbine.services.localization.TurbineLocalizationService
 services.PullService.classname=org.apache.turbine.services.pull.TurbinePullService
-services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
+services.IntakeService.classname=org.apache.fulcrum.intake.TurbineIntakeService
 
 # Turn on the appropriate template service.
 services.VelocityService.classname=org.apache.fulcrum.velocity.TurbineVelocityService
