added base permissions for screens.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -26,3 +26,9 @@ searchindex.path=/WEB-INF/index
 services.ScarabModuleService.classname=org.tigris.scarab.services.module.ModuleServiceImpl
 services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.ScarabModule
 services.UserService.classname=org.tigris.scarab.services.user.TurbineUserService
+
+# Base permissions for Scarab Pages
+scarab.security.entry.Wizard1.vm="Issue | Enter"
+scarab.security.entry.Wizard3.vm="Issue | Enter"
+scarab.security.admin.ModuleAttributeEditor.vm ="admin_users"
+
