Added project name

--- a/build.xml
+++ b/build.xml
@@ -10,9 +10,9 @@
 <!--                                                                        -->
 <!-- ====================================================================== -->
 
-<!-- $Id: build.xml,v 1.18 2001/08/30 03:17:12 mnf999 Exp $ -->
+<!-- $Id: build.xml,v 1.19 2001/08/30 07:03:58 rickardoberg Exp $ -->
 
-<project default="main">
+<project name="JBoss" default="main">
 
   <!-- ================================================================== -->
   <!-- Initialization                                                     -->
