--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -29,6 +29,9 @@ services.UserService.classname=org.tigris.scarab.services.user.TurbineUserServic
 
 # Base permissions for Scarab Pages
 scarab.security.entry.Wizard1.vm="Issue | Enter"
+scarab.security.entry.Wizard2.vm="Issue | Enter"
 scarab.security.entry.Wizard3.vm="Issue | Enter"
-scarab.security.admin.ModuleAttributeEditor.vm ="admin_users"
-
+scarab.security.entry.Wizard4.vm="Issue | Enter"
+scarab.security.admin.ModuleAttributeEditor.vm="Module | Edit"
+scarab.security.admin.AttributeShow.vm="Module | Edit"
+scarab.security.admin.AttributeEdit.vm="Module | Edit"
