fix the torque logging hopefully...

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.55 2001/08/28 01:00:33 jon Exp $
+# $Id: TurbineResources.properties,v 1.56 2001/08/30 22:28:19 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -61,12 +61,12 @@ log4j.appender.default.append = false
 # SQL generated will be logged if the category
 # priority is set to DEBUG
 
-log4j.category.sql = DEBUG, sql
-log4j.appender.sql = org.apache.log4j.FileAppender
-log4j.appender.sql.file = ${webapp}/logs/sql.log
-log4j.appender.sql.layout = org.apache.log4j.PatternLayout
-log4j.appender.sql.layout.conversionPattern = %d [%t] %-5p %c - %m%n
-log4j.appender.sql.append = false
+log4j.category.org.apache.torque = DEBUG, torque
+log4j.appender.torque = org.apache.log4j.FileAppender
+log4j.appender.torque.file = ${webapp}/logs/torque.log
+log4j.appender.torque.layout = org.apache.log4j.PatternLayout
+log4j.appender.torque.layout.conversionPattern = %d [%t] %-5p %c - %m%n
+log4j.appender.torque.append = false
 
 # -------------------------------------------------------------------
 # 
