--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 <!--                                                                        -->
 <!-- ====================================================================== -->
 
-<!-- $Id: build.xml,v 1.20 2001/08/31 05:39:08 user57 Exp $ -->
+<!-- $Id: build.xml,v 1.21 2001/09/01 04:21:25 user57 Exp $ -->
 
 <project name="JBoss" default="main">
 
@@ -260,7 +260,7 @@
   <!-- Override JUnit defaults -->
   <property name="junit.timeout" value="240000"/> <!-- 4 minutes -->
   <property name="junit.batchtest.todir" value="${build.reports}"/>
-  <property name="junit.jvm.options" value="-client"/>
+  <property name="junit.jvm.options" value="-Ddummy"/>
 
   <!-- RMIC should generate stubs compatible with Java 1.2+ -->
   <property name="rmic.stubVersion" value="1.2"/>
@@ -314,15 +314,19 @@
      |  Pretty print everything.
      |
      |  This uses the jedit JavaStyle plugin via the ejbdoclet pretty ant task.
+     |
      |  cvs="true" only pretties files you have already modified.
      |  cvs="false" pretties all files.
     -->
 
+  <property name="pretty.cvs" value="true"/>
+  <property name="pretty.includes" value="**/*.java"/>
+
   <target name="pretty" depends="init">
     <taskdef name="pretty" classname="pretty.Pretty"/>
-    <pretty settingsDir="${control.root}/etc" cvs="true">
+    <pretty settingsDir="${control.root}/etc" cvs="${pretty.cvs}">
       <fileset dir="${source.java}">
-        <include name="**/*.java"/>
+        <include name="${pretty.includes}"/>
       </fileset>
     </pretty>
   </target>
@@ -451,8 +455,8 @@
         <include name="org/jboss/**"/>
         <!-- Exclude Main, it will go into run.jar -->
         <exclude name="org/jboss/Main*"/>
-		  <!-- Exclude JMX Connector stuff we will use the connector JSR for that -->
-		  <exclude name="org/jboss/jmx/**"/>
+        <!-- Exclude JMX Connector stuff we will use the connector JSR for that -->
+	<exclude name="org/jboss/jmx/**"/>
       </fileset>
 
       <fileset dir="${build.resources}">
@@ -542,18 +546,17 @@
       <fileset dir="${build.resources}/org/jboss/verifier"/>
     </jar>
 
-    <!-- Build jmx-connector.jsr -->
-    <unjar src="${thirdparty.root}/sun/jmx/lib/jmxtools.jar" 
-	   dest="${build.classes}"/>
-	 <jar jarfile="${build.jars}/jmx-connector.jsr"
+    <!-- Build jmx-connector.jsr (should try to use jlink for this)--> 
+    <unjar src="${sun.jmx.lib}/jmxtools.jar" dest="${build.classes}"/>
+    <jar jarfile="${build.jars}/jmx-connector.jsr"
          manifest="${build.etc}/rmiconnector.mf">
       <fileset dir="${build.classes}">
         <include name="org/jboss/jmx/**"/>
-		  <include name="com/sun/jdmk/**"/>
-		</fileset>
-		<fileset dir="${source.java}/org/jboss/jmx">
-			<include name="META-INF/**"/>
-		</fileset>
+	<include name="com/sun/jdmk/**"/>
+      </fileset>
+      <fileset dir="${source.java}/org/jboss/jmx">
+        <include name="META-INF/**"/>
+      </fileset>
     </jar>
 
     <!-- Build rmiconnector.jar -->
