Initial attempt at renaming Category as Logger. As far as I can tell, it also preserves backward compatibility.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -22,13 +22,14 @@ JSOURCES:=DailyRollingFileAppender.java\
 	ConsoleAppender.java\
         MDC.java\
         Level.java\
+        Logger.java\
+	PropertyConfigurator.java\
+	BasicConfigurator.java\
 
-#        Logger.java\
 #        LogManager.java\
 
 #       HTMLLayout.java\
-#	PropertyConfigurator.java\
-#	BasicConfigurator.java\
+
 
 ifdef $(ISJDK1)
  JSOURCES:=$(JSOURCES) RollingFileAppenderBeanInfo.java
