- The CategoryFactory class has been replaced by the LoggerFactory    class. The makeNewCategoryInstance method has been renamed as    makeNewLoggerInstance. This change requires client code make use of    extended Category classes to be recompiled. [**]
Dependent classes have been modified to reflect this change.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -25,10 +25,10 @@ JSOURCES:=DailyRollingFileAppender.java\
         Logger.java\
 	PropertyConfigurator.java\
 	BasicConfigurator.java\
+        HTMLLayout.java\
+        LogManager.java\
 
-#        LogManager.java\
 
-#       HTMLLayout.java\
 
 
 ifdef $(ISJDK1)
