*** empty log message ***

--- a/src/java/org/apache/log4j/spi/Makefile
+++ b/src/java/org/apache/log4j/spi/Makefile
@@ -2,20 +2,21 @@
 PKG_DIR :=org/apache/log4j/spi
 DEPTH   :=../../../../../..
 JSOURCES:=OptionHandler.java\
-	AppenderAttachable.java\
-	LoggingEvent.java\
-	LocationInfo.java\
-	RootCategory.java\
-	Filter.java\
-        ErrorHandler.java\
-	ErrorCode.java\
-	Configurator.java\
-        ThrowableInformation.java\
-	TriggeringEventEvaluator.java\
-        HierarchyEventListener.java\
-        LoggerRepository.java\
-        DefaultRepositorySelector.java\
-        LoggerFactory.java\
+  AppenderAttachable.java\
+  LoggingEvent.java\
+  LocationInfo.java\
+  RootCategory.java\
+  Filter.java\
+  ErrorHandler.java\
+  ErrorCode.java\
+  Configurator.java\
+  ThrowableInformation.java\
+  TriggeringEventEvaluator.java\
+  HierarchyEventListener.java\
+  LoggerFactory.java\
+  RepositorySelector.java\
+  DefaultRepositorySelector.java\
+  LoggerRepository.java\
 
 SUBDIRS := 
 
